# FatFileFinder

./: .gitignore  CMakeLists.txt  FatFileFinder Dynamic.entitlements  README.md  init-mac.sh  makefile  windows.sln  windows.vcxproj  windows.vcxproj.filters
.github/workflows/: build.yml  website.yml
_site/: index.html  style.css
mac.xcodeproj/: project.pbxproj
mac.xcodeproj/project.xcworkspace/xcuserdata/main.xcuserdatad/: UserInterfaceState.xcuserstate
mac.xcodeproj/xcshareddata/xcschemes/: AppDynamic.xcscheme  AppStatic.xcscheme
mac.xcodeproj/xcuserdata/main.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
source/: DirectoryData.cpp  DirectoryData.hpp  FileSizeModel.h  FolderDisplay.cpp  FolderDisplay.hpp  Info_cocoa.plist  folder_sizer.cpp  folder_sizer.hpp  form.fbp  globals.cpp  globals.h  icon.xcf  interface.cpp  interface.h  interface_derived.cpp  interface_derived.h  main.cpp  wxlin_s.xpm  wxmac.icns
wxWidgets/src/osx/carbon/: dcscreen.cpp
